Styles: minimised div resize on question load to prevent jumping layout

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -43,6 +43,10 @@ header {
 	background-color: gray;
 }
 
+.question_container {
+	min-height: 12lh;
+}
+
 .question {
 	font-size: 1.8rem;
 	margin: 1em 0;
